--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="google-site-verification" content="h9FqMW-A6hgkaiMBtHjYkHE1wE5fYtnNw7TedYHqhGw" />
@@ -125,6 +126,7 @@
       <a href="https://irvyandl.github.io/VirtualAssistance/Projects.html" class="primary">The Visuals I Build</a>
       <a href="https://irvyandl.github.io/VirtualAssistance/Experience.html" class="secondary">The Experience I Provide</a>
       <a href="https://irvyandl.github.io/VirtualAssistance/Skills.html" class="secondary">The Skills I Add</a>
+      <a href="https://irvyandl.github.io/VirtualAssistance/FAQ.html" class="secondary">Frequently Asked Questions</a>
     </div>
   </header>
 
