--- a/FAQ.html
+++ b/FAQ.html
@@ -1,4 +1,3 @@
-
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -54,6 +53,26 @@
       line-height: 1.6;
     }
 
+    .home-button {
+      display: flex;
+      justify-content: center;
+      margin-top: 2rem;
+    }
+
+    .home-button a {
+      background-color: var(--color-accent);
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+
+    .home-button a:hover {
+      background-color: #1d3b6c;
+    }
+
     footer {
       text-align: center;
       margin-top: 4rem;
@@ -67,19 +86,29 @@
     <h2>Frequently Asked Questions</h2>
 
     <h3>What services do you offer as a Virtual Assistant?</h3>
-    <p>I provide administrative support, data visualization (Excel/Power BI), and visual content (PowerPoint/Canva). I handle email management, calendar coordination, CRM tasks, reports, dashboards, and branded presentations.</p>
+    <p>I provide structured virtual assistance and data services, including inbox/calendar management, CRM updates, reporting, dashboards (Excel/Power BI), and branded slide design (PowerPoint/Canva).</p>
 
     <h3>How do I know you're reliable and organized?</h3>
-    <p>Every task is tracked, reported, and scheduled through organized tools like Google Calendar and Excel. My work process includes weekly updates and structured delivery cycles, so everything is clear and consistent.</p>
+    <p>Each client has a structured plan with clear hours and deliverables. I track tasks with Google Calendar and Excel, and provide consistent updates to ensure transparency, timeliness, and alignment with your goals.</p>
 
     <h3>Do you handle confidential data securely?</h3>
-    <p>Yes. I use encrypted sharing platforms like Google Drive and OneDrive, password managers when needed, and am open to NDAs for sensitive data.</p>
+    <p>Yes. I use encrypted cloud services (Google Drive, OneDrive), and strong password policies. NDAs are welcome, and I treat sensitive business data with the confidentiality it deserves.</p>
 
     <h3>How do payments work?</h3>
-    <p>All payments are securely managed via <strong>Escrow.com</strong>. This protects both parties by holding funds until work is approved. You'll receive an official Escrow link where we both agree on terms, and you stay in control every step of the way.</p>
+    <p>I use <strong>Escrow.com</strong> to ensure mutual protection. Once we agree on the terms, you'll receive a private Escrow link to deposit payment. Funds are released only when you're satisfied with the results.</p>
+
+    <h3>Will we sign a contract?</h3>
+    <p>Yes. I provide a clear service agreement tailored to your project. It outlines the scope, deadlines, fees, and terms like emergency policies or revisions — so both sides stay aligned and confident throughout.</p>
+
+    <h3>What if there's an emergency or unexpected situation?</h3>
+    <p>If I face medical leave or a local emergency (weather, internet, etc.), you'll be notified with at least 48 hours' notice (or 12 for urgent issues), backed by official reports if needed. I plan ahead to avoid delays whenever possible.</p>
 
     <h3>How do we get started?</h3>
-    <p>Once you fill out the client form, I’ll review your needs and suggest a personalized service plan. From there, we’ll confirm scope and timelines, and you’ll receive your secure Escrow link. Work begins once terms are approved.</p>
+    <p>Fill out my short onboarding form on the contact page. Once I review your needs, I'll suggest the best plan and send over your agreement + Escrow link. Work starts immediately after confirmation.</p>
+
+    <div class="home-button">
+      <a href="https://irvyandl.github.io/VirtualAssistance/">← Back to Home</a>
+    </div>
   </div>
 
   <footer>
