--- a/FAQ.html
+++ b/FAQ.html
@@ -100,6 +100,17 @@
     <h3>Will we sign a contract?</h3>
     <p>Yes. I provide a clear service agreement tailored to your project. It outlines the scope, deadlines, fees, and terms like emergency policies or revisions — so both sides stay aligned and confident throughout.</p>
 
+    <h3>How does collaboration work? What are your prices?</h3>
+    <p>
+      I work through <strong>custom monthly plans</strong> designed specifically for each client’s needs, goals, and budget. 
+      These plans ensure we’re aligned on hours, deliverables, and expectations from the start.
+      To get matched with the right plan, simply fill out the short questionnaire on my 
+      <a href="https://irvyandl.github.io/VirtualAssistance/contact.html" style="color: var(--color-accent); font-weight: bold; text-decoration: none;">
+        contact page
+      </a> 
+      and describe what you’re looking for. I’ll personally review your answers and propose the best fit.
+    </p>
+
     <h3>What if there's an emergency or unexpected situation?</h3>
     <p>If I face medical leave or a local emergency (weather, internet, etc.), you'll be notified with at least 48 hours' notice (or 12 for urgent issues), backed by official reports if needed. I plan ahead to avoid delays whenever possible.</p>
 
