--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="google-site-verification" content="h9FqMW-A6hgkaiMBtHjYkHE1wE5fYtnNw7TedYHqhGw" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bilingual virtual assistant offering dashboards, business reports, and visual presentations for digital teams and e-commerce businesses.">
   <meta name="description" lang="es" content="Asistente virtual bilingüe que ofrece dashboards, reportes empresariales y presentaciones visuales para equipos digitales y negocios de e-commerce.">
   <title>Irvin Prado | Virtual Assistance + BI</title>
+  <link rel="icon" href="https://github.com/Irvyandl/VirtualAssistance/blob/main/logo.ico.png?raw=true" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
