--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Bilingual virtual assistant offering dashboards, business reports, and visual presentations for digital teams and e-commerce businesses.">
   <meta name="description" lang="es" content="Asistente virtual bilingüe que ofrece dashboards, reportes empresariales y presentaciones visuales para equipos digitales y negocios de e-commerce.">
   <title>Irvin Prado | Virtual Assistance + BI</title>
-  <link rel="icon" href="https://github.com/Irvyandl/VirtualAssistance/logo.ico" type="image/png">
+  <link rel="icon" href="https://raw.githubusercontent.com/Irvyandl/VirtualAssistance/refs/heads/main/logo.ico" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
