--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 <body>
   <div class="container">
     <h2>Let’s match you with the right plan 🚀</h2>
-    <form action="https://formsubmit.co/irvinforbusinesses@gmail.com" method="POST">
+    <form action="https://formsubmit.co/irvinforbusinesses+design@gmail.com" method="POST">
       <input type="hidden" name="_next" value="https://irvyandl.github.io/VirtualAssistance/confirm.html" />
       <input type="hidden" name="_captcha" value="false" />
 
