--- a/contract.html
+++ b/contract.html
@@ -99,7 +99,7 @@
       <li>Task 2: [Insert Task]</li>
       <li>Task 3: [Insert Task]</li>
     </ul>
-    <p>Services will be delivered remotely through digital tools. Provider obligations are determined by the specific service plan selected and paid for.</p>
+    <p>Services will be delivered remotely through digital tools. Provider obligations are determined by the specific service plan selected and paid for. Availability for on-demand project execution is included based on the scope of the plan.</p>
 
     <h2>2. Ownership of Work</h2>
     <p>All materials created during the course of the service, including documents, presentations, and dashboards, are the intellectual property of the client upon full payment.</p>
@@ -112,43 +112,49 @@
       <li>Payment Method: Escrow.com (or agreed alternative)</li>
       <li>Payment Frequency: [Weekly / Biweekly / Monthly / One-time]</li>
     </ul>
-    <p><strong>Payment Terms:</strong> A 10% late fee will apply per day after the due date. Services and delivery of any project files will be suspended starting from the third day of non-payment. The agreement remains valid while recurring payments are maintained.</p>
 
-    <h2>4. Fee Adjustments</h2>
+    <h2>4. Payment Policy</h2>
+    <ul>
+      <li>Clients must complete payment via Escrow.com within 2 calendar days of receiving the invoice following the trial phase.</li>
+      <li>The collaboration begins and the monthly cycle starts from the invoice date, regardless of when the agreement was signed.</li>
+      <li>All future monthly invoices must be paid on or before their due date. Delays exceeding two days may result in immediate task and project suspension.</li>
+    </ul>
+
+    <h2>5. Fee Adjustments</h2>
     <p>Service rates may be subject to change at the Provider’s discretion due to tool upgrades, added services, or cost of operations. A notice will be given at least 10 days before the end of the monthly cycle.</p>
 
-    <h2>5. One-Time Projects Policies</h2>
-    <p>Must be requested at least 48 hours in advance. Otherwise, an expedited service fee will apply. Delivery timelines and specific project scope are defined in agreement with the selected plan.</p>
+    <h2>6. One-Time Projects Policies</h2>
+    <p>One-time projects must be requested before the need date. A 50% advance is required upon approval, and the remaining 50% is payable upon delivery. Only deliverables within the paid plan ([Insert Plan Name]) will be considered. External requests require a separate agreement.</p>
 
-    <h2>6. Terms of Termination</h2>
+    <h2>7. Terms of Termination</h2>
     <p>Either party may end this agreement with 10 days prior written notice. Notice must be provided by Day 20 of a monthly cycle to avoid extended billing obligations. Once a service is canceled, the agreement is no longer in force.</p>
 
-    <h2>7. Communication</h2>
-    <p>Preferred via email: irvyandl18@gmail.com. Tools such as Slack, Trello, or WhatsApp may also be used upon mutual agreement.</p>
+    <h2>8. Communication Policy</h2>
+    <p>Task and project requests must be submitted in writing (email, Slack, WhatsApp). Provider will reply with a recap to confirm. If no corrections are submitted within 30 minutes, the task or project will proceed under the scope specified in the recap.</p>
 
-    <h2>8. Project Requests</h2>
+    <h2>9. Project Requests</h2>
     <p>Project work and additional deliverables are selected by the client based on the features available in their chosen plan ([Insert Plan Name]).</p>
 
-    <h2>9. Force Majeure</h2>
+    <h2>10. Force Majeure</h2>
     <p>In the case of natural disasters or political unrest in the provider’s location, work may be paused with at least 12 hours' notice and proof (e.g., weather alert or official report).</p>
 
-    <h2>10. Health & Emergency Leave</h2>
+    <h2>11. Health & Emergency Leave</h2>
     <p>If a personal health issue arises, the provider will give a 48-hour notice and outline the expected downtime.</p>
 
-    <h2>11. Confidentiality</h2>
+    <h2>12. Confidentiality</h2>
     <p>Client information will remain confidential throughout and after the agreement. NDAs may be signed upon request.</p>
 
-    <h2>12. Legal Jurisdiction</h2>
+    <h2>13. Legal Jurisdiction</h2>
     <p>To be defined mutually by both parties before the agreement is finalized.</p>
 
-    <h2>13. Limitation of Liability</h2>
-    <p>The provider is not responsible for errors or issues caused by third-party tools, software, or platforms.</p>
+    <h2>14. Limitation of Liability</h2>
+    <p>The provider shall not be held liable for any damage, delays, or disruptions caused by third-party tools, platforms, or collaborators. The provider is only responsible for performance directly related to their own tasks as agreed in the scope of services. Errors resulting from misinformation or incomplete instructions will not be subject to refunds or extra hours. Redelivery for one-time projects must be paid anew.</p>
 
-    <h2>14. Approval</h2>
+    <h2>15. Approval</h2>
     <div class="signature">
       <div class="signature-block">
         <p><strong>Client Signature:</strong></p>
-        <div class="signature-line">[Signature Here]</div>
+        <div class="signature-line">[Name of the client]</div>
         <p><strong>Date:</strong> ___________________</p>
       </div>
       <div class="signature-block">
