--- a/contract.html
+++ b/contract.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -104,53 +105,44 @@
     <h2>2. Ownership of Work</h2>
     <p>All materials created during the course of the service, including documents, presentations, and dashboards, are the intellectual property of the client upon full payment.</p>
 
-    <h2>3. Service Hours and Rate</h2>
+    <h2>3. Payment Policy</h2>
     <ul>
-      <li>Total service hours: [XX] hours per [week/month/project]</li>
-      <li>Hourly Rate: [$XX USD]</li>
-      <li>Total Fee: [$XXX USD]</li>
-      <li>Payment Method: Escrow.com (or agreed alternative)</li>
-      <li>Payment Frequency: [Weekly / Biweekly / Monthly / One-time]</li>
+      <li>Clients must complete payment via Escrow.com within 2 calendar days of receiving the invoice following the trial phase. Failure to do so will result in cancellation of the service. *This Clause only applies to the first invoice issued, by the next issued invoice, the 2 day trial phase will no longer apply*</li>
+      <li>The collaboration and the monthly cycle officially begin on the date the invoice is issued by the provider, not the agreement signature date.</li>
+      <li>If the client fails to pay after the 30-day billing cycle, a 10% late fee will apply for each additional day. Tasks, projects, and deliverables will be suspended and withheld until full payment, including any accrued penalties, is received.</li>
     </ul>
 
-    <h2>4. Payment Policy</h2>
-    <ul>
-      <li>Clients must complete payment via Escrow.com within 2 calendar days of receiving the invoice following the trial phase.</li>
-      <li>The collaboration begins and the monthly cycle starts from the invoice date, regardless of when the agreement was signed.</li>
-      <li>All future monthly invoices must be paid on or before their due date. Delays exceeding two days may result in immediate task and project suspension.</li>
-    </ul>
-
-    <h2>5. Fee Adjustments</h2>
+    <h2>4. Fee Adjustments</h2>
     <p>Service rates may be subject to change at the Provider’s discretion due to tool upgrades, added services, or cost of operations. A notice will be given at least 10 days before the end of the monthly cycle.</p>
 
-    <h2>6. One-Time Projects Policies</h2>
-    <p>One-time projects must be requested before the need date. A 50% advance is required upon approval, and the remaining 50% is payable upon delivery. Only deliverables within the paid plan ([Insert Plan Name]) will be considered. External requests require a separate agreement.</p>
+    <h2>5. One-Time Projects Policies</h2>
+    <p>One-time projects must be requested 48 hours before the need date. A 50% advance is required upon approval, and the remaining 50% is payable upon delivery. Only deliverables within the paid plan ([Insert Plan Name]) will be considered. External requests require a separate agreement.</p>
 
-    <h2>7. Terms of Termination</h2>
+    <h2>6. Terms of Termination</h2>
     <p>Either party may end this agreement with 10 days prior written notice. Notice must be provided by Day 20 of a monthly cycle to avoid extended billing obligations. Once a service is canceled, the agreement is no longer in force.</p>
 
-    <h2>8. Communication Policy</h2>
+    <h2>7. Communication Policy</h2>
     <p>Task and project requests must be submitted in writing (email, Slack, WhatsApp). Provider will reply with a recap to confirm. If no corrections are submitted within 30 minutes, the task or project will proceed under the scope specified in the recap.</p>
 
-    <h2>9. Project Requests</h2>
+    <h2>8. Project Requests</h2>
     <p>Project work and additional deliverables are selected by the client based on the features available in their chosen plan ([Insert Plan Name]).</p>
 
-    <h2>10. Force Majeure</h2>
+    <h2>9. Force Majeure</h2>
     <p>In the case of natural disasters or political unrest in the provider’s location, work may be paused with at least 12 hours' notice and proof (e.g., weather alert or official report).</p>
 
-    <h2>11. Health & Emergency Leave</h2>
-    <p>If a personal health issue arises, the provider will give a 48-hour notice and outline the expected downtime.</p>
+    <h2>10. Health & Emergency Leave</h2>
+    <p>If a personal health issue arises, the provider will give a 48-hour notice and outline the expected downtime, including an estimated number of hours or days affected whenever possible.</p>
 
-    <h2>12. Confidentiality</h2>
+    <h2>11. Confidentiality</h2>
     <p>Client information will remain confidential throughout and after the agreement. NDAs may be signed upon request.</p>
 
-    <h2>13. Legal Jurisdiction</h2>
+    <h2>12. Legal Jurisdiction</h2>
     <p>To be defined mutually by both parties before the agreement is finalized.</p>
 
-    <h2>14. Limitation of Liability</h2>
-    <p>The provider shall not be held liable for any damage, delays, or disruptions caused by third-party tools, platforms, or collaborators. The provider is only responsible for performance directly related to their own tasks as agreed in the scope of services. Errors resulting from misinformation or incomplete instructions will not be subject to refunds or extra hours. Redelivery for one-time projects must be paid anew.</p>
+    <h2>13. Limitation of Liability</h2>
+    <p>The provider shall not be held liable for any damage, delays, or disruptions caused by third-party tools, platforms, collaborators, or persons. The provider is only responsible for performance directly related to their own tasks as agreed in the scope of services. Errors resulting from misinformation or incomplete instructions will not be subject to refunds or extra hours. Redelivery for one-time projects must be paid anew. No hour bonuses or refunds apply to general service cycles when such errors occur.</p>
 
-    <h2>15. Approval</h2>
+    <h2>14. Approval</h2>
     <div class="signature">
       <div class="signature-block">
         <p><strong>Client Signature:</strong></p>
