--- a/contract.html
+++ b/contract.html
@@ -100,47 +100,47 @@
       <li>Task 2: [Insert Task]</li>
       <li>Task 3: [Insert Task]</li>
     </ul>
-    <p>Services will be delivered remotely through digital tools. Provider obligations are determined by the specific service plan selected and paid for. Availability for on-demand project execution is included based on the scope of the plan.</p>
+    <p>Services will be delivered remotely through digital tools. Provider obligations are defined by the specific service plan selected and paid for. The plan also includes availability for additional one-time projects related to the plan’s scope.</p>
 
     <h2>2. Ownership of Work</h2>
-    <p>All materials created during the course of the service, including documents, presentations, and dashboards, are the intellectual property of the client upon full payment.</p>
+    <p>All materials created during the course of the service, including documents, presentations, and dashboards, become the client’s intellectual property upon full payment.</p>
 
     <h2>3. Payment Policy</h2>
     <ul>
-      <li>Clients must complete payment via Escrow.com within 2 calendar days of receiving the invoice following the trial phase. Failure to do so will result in cancellation of the service. *This Clause only applies to the first invoice issued, by the next issued invoice, the 2 day trial phase will no longer apply*</li>
-      <li>The collaboration and the monthly cycle officially begin on the date the invoice is issued by the provider, not the agreement signature date.</li>
-      <li>If the client fails to pay after the 30-day billing cycle, a 10% late fee will apply for each additional day. Tasks, projects, and deliverables will be suspended and withheld until full payment, including any accrued penalties, is received.</li>
+      <li>Clients must complete payment via Escrow.com within 2 calendar days after receiving the first invoice following the trial phase. If payment is not received, services will be canceled. <em>This clause applies only to the first invoice.</em></li>
+      <li>Each monthly cycle officially begins on the date the invoice is issued by the provider. This invoice date, not the agreement signature date, will serve as the service start date.</li>
+      <li>If payment is not received by Day 30 of the billing cycle, a 10% late fee will be added for each day of delay. All services, tasks, and deliverables will be suspended until payment is received in full, including penalties.</li>
     </ul>
 
     <h2>4. Fee Adjustments</h2>
-    <p>Service rates may be subject to change at the Provider’s discretion due to tool upgrades, added services, or cost of operations. A notice will be given at least 10 days before the end of the monthly cycle.</p>
+    <p>Service fees may be adjusted at the provider’s discretion due to upgrades, added tools, or operational cost changes. Clients will be notified at least 10 days before the new rate takes effect at the end of the current cycle.</p>
 
-    <h2>5. One-Time Projects Policies</h2>
-    <p>One-time projects must be requested 48 hours before the need date. A 50% advance is required upon approval, and the remaining 50% is payable upon delivery. Only deliverables within the paid plan ([Insert Plan Name]) will be considered. External requests require a separate agreement.</p>
+    <h2>5. One-Time Project Policies</h2>
+    <p>Projects must be requested at least 48 hours before the desired delivery date. A 50% deposit is due upon approval, with the remaining 50% due upon delivery. Only deliverables that are part of the purchased plan ([Insert Plan Name]) will be fulfilled. External requests require a new agreement.</p>
 
     <h2>6. Terms of Termination</h2>
-    <p>Either party may end this agreement with 10 days prior written notice. Notice must be provided by Day 20 of a monthly cycle to avoid extended billing obligations. Once a service is canceled, the agreement is no longer in force.</p>
+    <p>Either party may terminate the agreement with 10 days’ written notice. Notice must be given by Day 20 of a billing cycle to avoid further charges. Once terminated, the agreement is no longer valid.</p>
 
     <h2>7. Communication Policy</h2>
-    <p>Task and project requests must be submitted in writing (email, Slack, WhatsApp). Provider will reply with a recap to confirm. If no corrections are submitted within 30 minutes, the task or project will proceed under the scope specified in the recap.</p>
+    <p>Task and project instructions must be provided in writing (email, Slack, WhatsApp). The provider will respond with a recap. If no corrections are submitted within 30 minutes, the task or project will proceed based on the confirmed scope.</p>
 
     <h2>8. Project Requests</h2>
-    <p>Project work and additional deliverables are selected by the client based on the features available in their chosen plan ([Insert Plan Name]).</p>
+    <p>All project tasks and add-ons must fall within the scope of the client's selected service plan ([Insert Plan Name]).</p>
 
     <h2>9. Force Majeure</h2>
-    <p>In the case of natural disasters or political unrest in the provider’s location, work may be paused with at least 12 hours' notice and proof (e.g., weather alert or official report).</p>
+    <p>In the event of natural disasters or political emergencies affecting the provider’s location, services may be paused. A minimum of 12 hours' notice and verifiable documentation (e.g., weather alerts or news reports) will be provided.</p>
 
     <h2>10. Health & Emergency Leave</h2>
-    <p>If a personal health issue arises, the provider will give a 48-hour notice and outline the expected downtime, including an estimated number of hours or days affected whenever possible.</p>
+    <p>In the case of illness or medical emergencies, a 48-hour notice will be given. The provider will include an estimate of how many hours or days of service may be impacted whenever possible.</p>
 
     <h2>11. Confidentiality</h2>
-    <p>Client information will remain confidential throughout and after the agreement. NDAs may be signed upon request.</p>
+    <p>All client information will remain strictly confidential during and after the agreement term. NDAs may be signed upon request.</p>
 
     <h2>12. Legal Jurisdiction</h2>
-    <p>To be defined mutually by both parties before the agreement is finalized.</p>
+    <p>This agreement will be governed by a jurisdiction mutually agreed upon by both parties before contract execution.</p>
 
     <h2>13. Limitation of Liability</h2>
-    <p>The provider shall not be held liable for any damage, delays, or disruptions caused by third-party tools, platforms, collaborators, or persons. The provider is only responsible for performance directly related to their own tasks as agreed in the scope of services. Errors resulting from misinformation or incomplete instructions will not be subject to refunds or extra hours. Redelivery for one-time projects must be paid anew. No hour bonuses or refunds apply to general service cycles when such errors occur.</p>
+    <p>The provider shall not be liable for errors, delays, or disruptions caused by third-party platforms, collaborators, or persons. The provider is only responsible for performance directly tied to their tasks. Errors stemming from client-provided data or incomplete instructions are not covered. One-time projects affected by such errors will require full repayment for redelivery. In general service cycles, no extra hours or refunds apply under these conditions.</p>
 
     <h2>14. Approval</h2>
     <div class="signature">
